--- a/module1/css/main-screen.css
+++ b/module1/css/main-screen.css
@@ -12,6 +12,10 @@
     position: absolute;
     right: -130px;
     bottom: 0;
+    /*
+    ** TODO: лучше не использовать отризательный z-index
+    ** можно было основному блоку задать приоритет больше
+     */
     z-index: -1;
 }
 
