--- a/module1/css/features-screen.css
+++ b/module1/css/features-screen.css
@@ -39,11 +39,11 @@
 }
 .features-item--first {
     background-image: url('../image/main/features-screen/background1.png');
-    
+
 }
 .features-item--second {
     background-image: url('../image/main/features-screen/background2.png');
-    
+
 }
 .features-item--third {
     background-image: url('../image/main/features-screen/background3.png');
@@ -129,7 +129,7 @@
         font-size: 14px;
         margin: 10px 0;
     }
-    .features-item__button { 
+    .features-item__button {
         font-size: 14px;
     }
     .features-item__image {
@@ -139,11 +139,14 @@
         object-position: bottom;
     }
     .features-item--first {
+        /*
+        ** TODO: при нулевых значениях пишем '.1'
+         */
         background-color: rgba(105, 201, 187, 0.1);
     }
     .features-item--second {
         background-color: rgba(156, 105, 226, 0.1);
-    }   
+    }
     .features-item--third {
         background-color: rgba(240, 99, 184, 0.1);;
     }
